name:                airbus
version:             0.1.0.0
synopsis:            Converts Airbus schedules to SQL format for uploading to db
-- description:         
homepage:            csg.umich.edu/airbus
-- license:             
-- license-file:        LICENSE
author:              Mitchell Vitez
maintainer:          mitchell@vitez.me
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable airbus
  main-is:             airbus.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, text, attoparsec
        
  -- hs-source-dirs:      
  default-language:    Haskell2010
